--- a/AgileActorsDatabaseDemo/AgileActorsDatabaseDemo.csproj
+++ b/AgileActorsDatabaseDemo/AgileActorsDatabaseDemo.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="MediatR" Version="12.2.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
+    <PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.15" />
   </ItemGroup>
 
 </Project>
