--- a/AgileActorsDemo/AgileActorsDemo.csproj
+++ b/AgileActorsDemo/AgileActorsDemo.csproj
@@ -11,6 +11,8 @@
     <PackageReference Include="MediatR" Version="12.2.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.13" />
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="8.0.2" />
+    <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="Polly" Version="8.2.1" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
